# Code-For-FantasyID-Evaluation

./: .gitignore  README.md  notebook.py  pyproject.toml
.github/workflows/: deploy.yml
public/trufor/: detection.parquet
public/unifd/: detection.parquet
scores/fatformer/: detection.parquet  scores-test.parquet  scores-val.parquet
scores/mmfusion/: detection.parquet  scores-test.parquet  scores-val.parquet
scores/trufor/: scores-test.parquet  scores-val.parquet
scores/unifd/: scores-test.parquet  scores-val.parquet
