
[project]
dependencies = [
  "marimo[lsp,recommended]>=0.14.12",
  "plotly>=5.21",
  "scikit-learn>=1.6.0",
  "pandas>=2.0",
  "tabulate>=0.9.0",
]
name = "marimo-kernel"
# tensorflow not compatible with 3.13
requires-python = ">=3.12"
version = "0.1.0"

[tool.marimo.package_management]
manager = "uv"

[tool.uv]
index-url = "https://pypi.org/simple"

[tool.marimo.runtime]
auto_instantiate = false

[tool.marimo.ai.open_ai]
api_key = "unused"
model = "molab"
base_url = "https://ai.marimo.app/molab/v1"
